Add build script and improve project structure

--- a/examples/notebooks/pmml_sklearn_lab.ipynb
+++ b/examples/notebooks/pmml_sklearn_lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import shutil\n",
     "import sklearn2pmml as pmml\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.cluster import KMeans\n",
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,13 +28,12 @@
     "iris_data = load_iris(True)\n",
     "(X, y) = iris_data\n",
     "df = pd.DataFrame(X)\n",
-    "df.columns = ['x1', 'x2', 'x3', 'x4']\n",
-    "# df.to_csv(\"~/Codecookies/machine-learning-workspace/datasets/iris/train.csv\", columns=['x1', 'x2', 'x3', 'x4'], index=False)"
+    "df.columns = ['x1', 'x2', 'x3', 'x4']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,9 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 29.5 ms, sys: 2.98 ms, total: 32.5 ms\n",
+      "Wall time: 36.4 ms\n",
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 0 2 2 2 2 0 2 2 2 2\n",
+      " 2 2 0 0 2 2 2 2 0 2 0 2 0 2 2 0 0 2 2 2 2 2 0 2 2 2 2 0 2 2 2 0 2 2 2 0 2\n",
+      " 2 0]\n",
+      "[[ 5.9016129   2.7483871   4.39354839  1.43387097]\n",
+      " [ 5.006       3.418       1.464       0.244     ]\n",
+      " [ 6.85        3.07368421  5.74210526  2.07105263]]\n"
+     ]
+    }
+   ],
    "source": [
     "# output kmeans model\n",
     "kmeans = KMeans(n_clusters=3, max_iter=100, random_state=42)\n",
