Add simple prediction interface which is a wrapper for jpmml-evaluator

--- a/examples/notebooks/pmml_sklearn_lab.ipynb
+++ b/examples/notebooks/pmml_sklearn_lab.ipynb
@@ -14,7 +14,9 @@
     "import sklearn2pmml as pmml\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.externals import joblib"
+    "from sklearn.externals import joblib\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import ppmml"
    ]
   },
   {
@@ -33,26 +35,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_df = pd.DataFrame(X)\n",
+    "output_df.columns = ['x1', 'x2', 'x3', 'x4']\n",
+    "output_df['y'] = y\n",
+    "output_df.to_csv(\"/Users/lgrcyanny/Codecookies/machine-learning-workspace/datasets/iris/test.csv\", header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "base_path = \"./pmml-models/sklearn/\""
+    "base_path = \"/tmp/pmml-models/sklearn/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.5 ms, sys: 2.98 ms, total: 32.5 ms\n",
-      "Wall time: 36.4 ms\n",
+      "CPU times: user 22.4 ms, sys: 2.24 ms, total: 24.6 ms\n",
+      "Wall time: 22.6 ms\n",
       "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
       " 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       " 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 0 2 2 2 2 0 2 2 2 2\n",
@@ -60,7 +74,9 @@
       " 2 0]\n",
       "[[ 5.9016129   2.7483871   4.39354839  1.43387097]\n",
       " [ 5.006       3.418       1.464       0.244     ]\n",
-      " [ 6.85        3.07368421  5.74210526  2.07105263]]\n"
+      " [ 6.85        3.07368421  5.74210526  2.07105263]]\n",
+      "INFO: 17-12-26 11:43:13: base_converter.py:88 * 140735235661824 Startint to convert model file /tmp/pmml-models/sklearn/kmeans.pkl.z to pmml file /tmp/pmml-models/sklearn/kmeans.pmml with schema None and options: None\n",
+      "INFO: 17-12-26 11:43:15: base_converter.py:95 * 140735235661824 Successfully generate pmml file: /tmp/pmml-models/sklearn/kmeans.pmml\n"
      ]
     }
    ],
@@ -70,8 +86,12 @@
     "%time kmeans.fit(X)\n",
     "print kmeans.labels_\n",
     "print kmeans.cluster_centers_\n",
-    "joblib.dump(kmeans, base_path + \"kmeans.pkl.z\", compress = 9)\n",
-    "kmeans_loaded = joblib.load(base_path + \"kmeans.pkl.z\")\n",
+    "# dump kmeans lib\n",
+    "kmeans_model_path = base_path + \"kmeans.pkl.z\"\n",
+    "joblib.dump(kmeans, kmeans_model_path, compress = 9)\n",
+    "kmeans_loaded = joblib.load(kmeans_model_path)\n",
+    "# call ppmml to convert to pmml file\n",
+    "ppmml.to_pmml(model_input=kmeans_model_path, pmml_output=base_path + \"kmeans.pmml\")\n",
     "# then run code\n",
     "# java -jar ../../jpmml-sklearn/target/converter-executable-1.4-SNAPSHOT.jar --pkl-input kmeans.pkl.z --pmml-output kmeans-pmml"
    ]
@@ -150,26 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.01 ms, sys: 25.4 ms, total: 30.4 ms\n",
-      "Wall time: 50.3 ms\n"
+      "CPU times: user 1.07 ms, sys: 532 µs, total: 1.61 ms\n",
+      "Wall time: 1.03 ms\n",
+      "INFO: 17-12-26 11:53:26: base_converter.py:88 * 140735235661824 Startint to convert model file /tmp/pmml-models/sklearn/decision_tree.pkl.z to pmml file /tmp/pmml-models/sklearn/decision_tree.pmml with schema None and options: None\n",
+      "INFO: 17-12-26 11:53:28: base_converter.py:95 * 140735235661824 Successfully generate pmml file: /tmp/pmml-models/sklearn/decision_tree.pmml\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['decision_tree.pkl.z']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -177,7 +189,9 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "tree_clf = DecisionTreeClassifier(max_depth=6)\n",
     "%time tree_clf.fit(X, y)\n",
-    "joblib.dump(tree_clf, base_path + \"decision_tree.pkl.z\", compress = 9)"
+    "joblib.dump(tree_clf, base_path + \"decision_tree.pkl.z\", compress = 9)\n",
+    "# convert with ppmml\n",
+    "ppmml.to_pmml(model_input=base_path + \"decision_tree.pkl.z\", pmml_output=base_path + \"decision_tree.pmml\")"
    ]
   },
   {
