Add unit tests 1. add unit tests for sklearn, spark, xgboost, lightgbm, tensorflow, r 2. add dev/run_tests script for unit testing convenience 3. add install option for build script 4. improve spark examples in jar deps

--- a/examples/notebooks/pmml_xgboost_lab.ipynb
+++ b/examples/notebooks/pmml_xgboost_lab.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris_data = load_iris(True)\n",
@@ -29,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def gen_fmap_file(features, fout):\n",
@@ -79,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# save model\n",
@@ -96,8 +104,8 @@
    },
    "outputs": [],
    "source": [
-    "# convert to pmml with command\n",
-    "# java -jar ../../jpmml-xgboost/target/converter-executable-1.2-SNAPSHOT.jar --model-input ./pmml-models/xgboost/classifier.model --fmap-input ./pmml-models/xgboost/classifier.fmap --pmml-output ./pmml-models/xgboost/classifier.pmml"
+    "import ppmml\n",
+    "ppmml.to_pmml()"
    ]
   },
   {
