Improve README.md and examples

--- a/examples/notebooks/ppmml_sklearn_examples.ipynb
+++ b/examples/notebooks/ppmml_sklearn_examples.ipynb
@@ -121,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base_path = \"/tmp/pmml-models/sklearn/\"\n",
@@ -435,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
